# OSKernel2023-Main.os-2-1-1-

./: .gitignore  Makefile  README.md
doc/: Dev.md  README.md  TODO.md  debug.md  fat32.md  内存管理.md  文件系统.md  进程管理.md
doc-in-xmind/: README.md  src.xmind
doc/doc-in-xmind/: npucore-fat32.xmind
initial-apps/: initproc  user_shell
initial_apps/: initprocfortest
kernel/: Cargo.toml  Makefile
kernel/src/: config.rs  console.rs  entry.asm  lang_items.rs  link_initial_apps.S  linker-qemu.ld  main.rs  sbi.rs  timer.rs
kernel/src/boards/: k210-mem.rs  k210.rs  qemu.rs
kernel/src/drivers/block/: mod.rs  sdcard.rs
kernel/src/fs/: cache.rs  directory_tree.rs  mod.rs  stdio.rs
kernel/src/fs/dev/: pipe.rs  stdio.rs
kernel/src/fs/fat32/: inode.rs
kernel/src/mm/: config.rs  frame_allocator.rs  heap_allocator.rs  memory_set.rs  mod.rs  page_table.rs
kernel/src/sync/: futex.rs  mod.rs  mutex.rs  semaphore.rs
kernel/src/syscall/: config.rs  fs.rs  mod.rs  ppoll.rs  process.rs  signal.rs  sync.rs  syslog.rs  system.rs  thread.rs
kernel/src/task/: action.rs  futex.rs  id.rs  manager.rs  mod.rs  process.rs  processor.rs  rusage.rs  signal.rs  task.rs
kernel/src/trap/: context.rs  mod.rs  trap.S
os/: Cargo.toml  Makefile  buildfs.sh
os/src/: config.rs  lang_items.rs  link_initial_apps.S  main.rs  timer.rs
os/src/boards/: qemu.rs
os/src/drivers/block/: virtio_blk.rs
os/src/fs/: cache.rs  directory_tree.rs  inode.rs  layout.rs  mod.rs  pipe.rs  stdio.rs
os/src/fs/dev/: mod.rs  pipe.rs
os/src/fs/fat32/: inode.rs
os/src/mm/: memory_set.rs  mod.rs  page_table.rs
os/src/sync/: condvar.rs  mod.rs
os/src/syscall/: fs.rs  mod.rs  process.rs  sync.rs  system.rs
os/src/task/: id.rs  mod.rs  process.rs  signal.rs  task.rs
os/src/trap/: mod.rs
src/: Makefile  buildfs.sh
test/: brk  chdir  clone  close  dup  dup2  execve  exit  fork  fstat  getcwd  getdents  getpid  getppid  gettimeofday  mkdir_  mmap  mount  munmap  open  openat  pipe  read  sleep  test_echo  times  umount  uname  unlink  wait  waitpid  write  yield
user/: Cargo.toml
(+18 files in other folders)
