[package]
name = "os"
version = "0.1.0"
authors = ["Yifan Wu <shinbokuow@163.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { path = "../dependency/riscv", features = ["inline-asm"] }
lazy_static = { path = "../dependency/lazy_static-1.4.0", features = ["spin_no_std"] }
buddy_system_allocator = { path = "../dependency/buddy_system_allocator-0.6.0"}
bitflags = { path = "../dependency/bitflags-1.2.1"}
xmas-elf = { path = "../dependency/xmas-elf-0.7.0"}
virtio-drivers = { path = "../dependency/virtio-drivers" }
log = { path = "../dependency/log-0.4.17"} # maybe some problems
sbi-rt = { path = "../dependency/sbi-rt-0.0.2", features = ["legacy"] }
spin = { path = "../dependency/spin-0.7.1"}
downcast-rs = { path = "../dependency/downcast-rs-1.2.0", default-features = false }
num_enum = { path = "../dependency/num_enum-0.5.11", default-features = false }

[profile.release]
debug = true
